First working version

--- a/www/DeGlee.Rmd
+++ b/www/DeGlee.Rmd
@@ -1,14 +1,20 @@
-# De Glee
+---
+title: "De Glee"
+author: "C.H. van Immerzeel"
+date: "9-4-2020"
+output: 
+  html_document    
+params: 
+    set_title: "De Glee"
+---
 
-C.H. van Immerzeel
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
-9/4/2020
-
-Calculation of the (stationary) drawdown in an aquifer under an aquiclude caused by a fully penetrating well. Implementation of the De Glee formula. 
+# Calculation of the (stationary) drawdown in an aquifer under an aquiclude caused by a fully penetrating well. Implementation of the De Glee formula.
 
 Additionaly, the (stationary) horizontal flow in the aquifer towards the well is calculated (as a function of the distance from the well) using the formula of Huisman.
-
-![](https://user-images.githubusercontent.com/16401251/92252544-abba2c00-eece-11ea-88dd-76837e752867.JPG)
 
 ![Schematisation](https://user-images.githubusercontent.com/16401251/91999001-34ed2980-ed3c-11ea-93d0-753a89f74bb6.JPG)
 
